{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 595,
  "lineage": "b60d6d8e-bec2-89a7-a566-c54ab328402c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:network-acl/acl-06e9816953c916d9e",
            "default_network_acl_id": "acl-06e9816953c916d9e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06e9816953c916d9e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "818876620577",
            "subnet_ids": [
              "subnet-0a8386b51079a40b6",
              "subnet-0f53c8a7a27d48bbb"
            ],
            "tags": {
              "Name": "nomad-vpc-default",
              "Project": "Nomad"
            },
            "tags_all": {
              "Name": "nomad-vpc-default",
              "Project": "Nomad"
            },
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:route-table/rtb-09dca64eb74b37ea9",
            "default_route_table_id": "rtb-09dca64eb74b37ea9",
            "id": "rtb-09dca64eb74b37ea9",
            "owner_id": "818876620577",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "nomad-vpc-default",
              "Project": "Nomad"
            },
            "tags_all": {
              "Name": "nomad-vpc-default",
              "Project": "Nomad"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:security-group/sg-0a30d6ed98ecb9e52",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a30d6ed98ecb9e52",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "818876620577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nomad-vpc-default",
              "Project": "Nomad"
            },
            "tags_all": {
              "Name": "nomad-vpc-default",
              "Project": "Nomad"
            },
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ccaf63f626a8688",
            "arn": "arn:aws:ec2:eu-central-1:818876620577:elastic-ip/eipalloc-08ccaf63f626a8688",
            "domain": "vpc",
            "id": "eipalloc-08ccaf63f626a8688",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-66-209-188.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.209.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nomad-vpc-eu-central-1a",
              "Project": "Nomad"
            },
            "tags_all": {
              "Name": "nomad-vpc-eu-central-1a",
              "Project": "Nomad"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:internet-gateway/igw-0360ec3765685663b",
            "id": "igw-0360ec3765685663b",
            "owner_id": "818876620577",
            "tags": {
              "Name": "nomad-vpc",
              "Project": "Nomad"
            },
            "tags_all": {
              "Name": "nomad-vpc",
              "Project": "Nomad"
            },
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ccaf63f626a8688",
            "association_id": "eipassoc-05a25b6b96d790fc0",
            "connectivity_type": "public",
            "id": "nat-02381ed433829fe4d",
            "network_interface_id": "eni-01f162eb6680858b4",
            "private_ip": "10.0.101.142",
            "public_ip": "3.66.209.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f53c8a7a27d48bbb",
            "tags": {
              "Name": "nomad-vpc-eu-central-1a",
              "Project": "Nomad"
            },
            "tags_all": {
              "Name": "nomad-vpc-eu-central-1a",
              "Project": "Nomad"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-043239f0298b256c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02381ed433829fe4d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-043239f0298b256c2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0360ec3765685663b",
            "id": "r-rtb-0fc5c843c1f9c35361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc5c843c1f9c3536",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:route-table/rtb-043239f0298b256c2",
            "id": "rtb-043239f0298b256c2",
            "owner_id": "818876620577",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nomad-vpc-private",
              "Project": "Nomad"
            },
            "tags_all": {
              "Name": "nomad-vpc-private",
              "Project": "Nomad"
            },
            "timeouts": null,
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:route-table/rtb-0fc5c843c1f9c3536",
            "id": "rtb-0fc5c843c1f9c3536",
            "owner_id": "818876620577",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nomad-vpc-public",
              "Project": "Nomad"
            },
            "tags_all": {
              "Name": "nomad-vpc-public",
              "Project": "Nomad"
            },
            "timeouts": null,
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c307c003fa654402",
            "route_table_id": "rtb-043239f0298b256c2",
            "subnet_id": "subnet-0aca84553b9a2f1f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0913cf098229c384f",
            "route_table_id": "rtb-043239f0298b256c2",
            "subnet_id": "subnet-0a8386b51079a40b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b60aa7ba3f37d32e",
            "route_table_id": "rtb-0fc5c843c1f9c3536",
            "subnet_id": "subnet-0f53c8a7a27d48bbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6231efc1632292e",
            "route_table_id": "rtb-0fc5c843c1f9c3536",
            "subnet_id": "subnet-0001996bd660fdcfa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:subnet/subnet-0aca84553b9a2f1f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aca84553b9a2f1f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818876620577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nomad-vpc-private-eu-central-1a",
              "Project": "Nomad",
              "karpenter.sh/discovery": "nomad-cluster-v2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "nomad-vpc-private-eu-central-1a",
              "Project": "Nomad",
              "karpenter.sh/discovery": "nomad-cluster-v2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:subnet/subnet-0a8386b51079a40b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8386b51079a40b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818876620577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nomad-vpc-private-eu-central-1b",
              "Project": "Nomad",
              "karpenter.sh/discovery": "nomad-cluster-v2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "nomad-vpc-private-eu-central-1b",
              "Project": "Nomad",
              "karpenter.sh/discovery": "nomad-cluster-v2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:subnet/subnet-0f53c8a7a27d48bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f53c8a7a27d48bbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818876620577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nomad-vpc-public-eu-central-1a",
              "Project": "Nomad",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nomad-vpc-public-eu-central-1a",
              "Project": "Nomad",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:subnet/subnet-0001996bd660fdcfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0001996bd660fdcfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818876620577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nomad-vpc-public-eu-central-1b",
              "Project": "Nomad",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nomad-vpc-public-eu-central-1b",
              "Project": "Nomad",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0480af9b2f388b6be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:818876620577:vpc/vpc-0480af9b2f388b6be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e9816953c916d9e",
            "default_route_table_id": "rtb-09dca64eb74b37ea9",
            "default_security_group_id": "sg-0a30d6ed98ecb9e52",
            "dhcp_options_id": "dopt-0c9ea8f7e52861895",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0480af9b2f388b6be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09dca64eb74b37ea9",
            "owner_id": "818876620577",
            "tags": {
              "Name": "nomad-vpc",
              "Project": "Nomad"
            },
            "tags_all": {
              "Name": "nomad-vpc",
              "Project": "Nomad"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}